--- a/app/src/main/res/drawable/custom_spinner_white.xml
+++ b/app/src/main/res/drawable/custom_spinner_white.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/md_white_1000"/>
     <stroke android:color="#a1a499" android:width="1dp"></stroke>
-    <corners android:radius="5dp"/>
-
+    <corners android:radius="5dp"></corners>
 
 </shape>
