--- a/app/src/main/res/drawable/table_background.xml
+++ b/app/src/main/res/drawable/table_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#dedcdc"/>
+    <solid android:color="#3f3e3e"/>
     <stroke android:color="#a1a499" android:width="1dp"></stroke>
     <corners android:radius="5dp"></corners>
 
