--- a/app/src/main/res/layout/activity_add_new_exercise.xml
+++ b/app/src/main/res/layout/activity_add_new_exercise.xml
@@ -9,7 +9,39 @@
     >
 
 
+    <RelativeLayout
+        android:id="@+id/relaSpinner1"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="249dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/custom_spinner_white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ageTxt2">
 
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="12dp"
+            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
+
+        <Spinner
+            android:id="@+id/spinnerMuscle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:spinnerMode="dropdown" />
+    </RelativeLayout>
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/actionBar"
@@ -41,21 +73,6 @@
                 android:layout_marginLeft="135dp"
                 android:layout_alignParentLeft="true" />
 
-
-            <ImageView
-                android:id="@+id/profile"
-                android:layout_width="29dp"
-                android:layout_height="match_parent"
-
-                android:layout_alignParentStart="true"
-
-
-                android:layout_alignParentTop="true"
-                android:onClick="openDrawer"
-                android:paddingTop="2dp"
-                android:src="@drawable/menu"
-                tools:ignore="OnClick"
-                android:layout_alignParentLeft="true" />
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
@@ -97,57 +114,16 @@
     <EditText
         android:id="@+id/txtName"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_centerInParent="true"
         android:background="@drawable/custom_edit_text_white"
         android:ems="10"
         android:gravity="center"
         android:hint="اسم التمرين"
         android:inputType="textPersonName"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"/>
-    <View
-        android:id="@+id/view5"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"/>
 
-        android:layout_below="@+id/txtName"
-        android:background="@color/scifitBlue"
-        android:text="نسيت كلمة المرور؟"
-        android:textColor="@color/scifitBlue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtName" />
-
-
-    <Spinner
-        android:id="@+id/spinnerMuscle"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="245dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"/>
-    <View
-        android:id="@+id/view6"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_alignBottom="@+id/spinnerMuscle"
-        android:layout_centerHorizontal="true"
-        android:background="@color/scifitBlue"
-        android:text="نسيت كلمة المرور؟"
-        android:textColor="@color/scifitBlue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerMuscle"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        />
 
     <Button
         android:id="@+id/button4"
