--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.MealIngrActivity">
-
+    tools:context=".Activity.MealIngrActivity"
+    android:background="@color/grey">
 
     // هذي اللي تسوي البار اللي فوق
 
@@ -39,41 +39,40 @@
 
             <ImageView
                 android:id="@+id/profile"
-                android:layout_width="39dp"
+                android:layout_width="29dp"
                 android:layout_height="match_parent"
 
+                android:layout_alignParentLeft="true"
+
+
                 android:layout_alignParentStart="true"
-
-
                 android:layout_alignParentTop="true"
                 android:onClick="openDrawer"
                 android:paddingTop="2dp"
-                android:src="@drawable/profile_on_top"
-                tools:ignore="OnClick"
-                android:layout_alignParentLeft="true" />
+                android:src="@drawable/menu"
+                tools:ignore="OnClick" />
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarid"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="173dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/actionBar"
-        android:background="#bebcbc"
+        android:background="@color/grey"
         android:elevation="0dp"
-        android:gravity="center"
-        android:layout_alignParentLeft="true">
+        android:gravity="center">
 
         <android.support.v7.widget.CardView
-            android:layout_width="188dp"
-            android:layout_height="106dp">
+            android:layout_width="306dp"
+            android:layout_height="152dp">
 
             <ImageView
                 android:id="@+id/mealImg"
-                android:layout_width="188dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
         </android.support.v7.widget.CardView>
@@ -85,23 +84,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/appbarid"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="227dp"
         android:background="#333333"
         app:tabGravity="fill"
         app:tabIndicatorColor="#1d1d1d"
         app:tabMode="fixed"
         app:tabTextColor="@color/tabtextcolor"
-
         android:layout_alignParentLeft="true" />
-
-
-
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_id"
         android:layout_width="match_parent"
         android:layout_height="339dp"
-        android:layout_below="@+id/tablayout_id"></android.support.v4.view.ViewPager>
+        android:layout_below="@+id/tablayout_id"
+        android:background="@color/grey"></android.support.v4.view.ViewPager>
 
     <Button
         android:id="@+id/saveMealBtn"
