--- a/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_bottom_nav.xml
@@ -47,7 +47,7 @@
 
             <ImageView
                 android:id="@+id/profile"
-                android:layout_width="39dp"
+                android:layout_width="29dp"
                 android:layout_height="match_parent"
 
                 android:layout_alignParentStart="true"
@@ -56,7 +56,7 @@
                 android:layout_alignParentTop="true"
                 android:onClick="openDrawer"
                 android:paddingTop="2dp"
-                android:src="@drawable/profile_on_top"
+                android:src="@drawable/menu"
                 tools:ignore="OnClick"
                 android:layout_alignParentLeft="true" />
 
