--- a/app/src/main/res/layout/activity_inside_exercise.xml
+++ b/app/src/main/res/layout/activity_inside_exercise.xml
@@ -40,21 +40,6 @@
                 android:src="@drawable/logo_white" />
 
 
-            <ImageView
-                android:id="@+id/profile"
-                android:layout_width="29dp"
-                android:layout_height="match_parent"
-
-                android:layout_alignParentLeft="true"
-
-
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:onClick="openDrawer"
-                android:paddingTop="2dp"
-                android:src="@drawable/menu"
-                tools:ignore="OnClick" />
-
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
@@ -82,11 +67,11 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginLeft="55dp"
-        android:layout_marginRight="55dp"
-        android:layout_marginStart="55dp"
+        android:layout_height="201dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -111,20 +96,21 @@
         android:fontFamily="@font/cairo_semibold"
         android:text="Exercise Name Here"
         android:textSize="18sp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/relativeLayout4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginEnd="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginStart="25dp"
-        android:background="@color/scifitBlue"
+        android:background="@drawable/table_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
 
@@ -135,58 +121,81 @@
             android:id="@+id/txtSetsShow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="17dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="4dp"
             android:text="الجلسات"
             android:textColor="@color/md_white_1000"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="17dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txtRepsShow2"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtRepsShow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_alignParentStart="true"
+            android:layout_marginEnd="34dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="34dp"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="4dp"
             android:text="Volume"
             android:textColor="@color/md_white_1000"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="24dp" />
+            app:layout_constraintEnd_toStartOf="@+id/txtRepsShow4"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtRepsShow4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="82dp"
+            android:layout_marginLeft="104dp"
+            android:layout_marginStart="104dp"
+            android:layout_marginTop="4dp"
             android:text="RM1"
             android:textColor="@color/md_white_1000"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="82dp" />
+            app:layout_constraintEnd_toStartOf="@+id/txtRepsShow3"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtRepsShow3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_centerHorizontal="true"
-            android:text="الوزن المحمول"
-            android:textColor="@color/md_white_1000" />
+            android:layout_marginEnd="36dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="36dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="4dp"
+            android:text="الوزن"
+            android:textColor="@color/md_white_1000"
+            app:layout_constraintEnd_toStartOf="@+id/txtRepsShow2"
+            app:layout_constraintStart_toEndOf="@+id/txtRepsShow4"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtRepsShow2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="86dp"
+            android:layout_marginEnd="14dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginTop="4dp"
             android:text="التكرار"
             android:textColor="@color/md_white_1000"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="86dp" />
-    </RelativeLayout>
+            app:layout_constraintEnd_toStartOf="@+id/txtSetsShow"
+            app:layout_constraintStart_toEndOf="@+id/txtRepsShow3"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerInsideWorkout"
