--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -13,28 +13,73 @@
     <android.support.constraint.ConstraintLayout
 
         android:layout_width="match_parent"
-        android:layout_gravity="center"
         android:layout_height="match_parent"
-        >
+        android:layout_gravity="">
+
+        // هذي اللي تسوي البار اللي فوق
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/actionBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+
+            android:layout_marginBottom="5dp"
+            android:background="#002e65"
+            android:gravity="top
+"
+            android:paddingRight="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/ivProfile"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/logo"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+
+                    android:paddingTop="9dp"
+                    android:src="@drawable/logo_white" />
+
+
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
 
 
         <Button
             android:id="@+id/btnRegister"
-            android:onClick="registerBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
             android:layout_marginLeft="27dp"
             android:layout_marginRight="27dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="36dp"
             android:backgroundTint="#cf0545"
+            android:fontFamily="@font/cairo_semibold"
             android:gravity="center"
+            android:onClick="registerBtn"
             android:text="حفظ ومتابعة"
             android:textColor="#ffff"
+
+            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/signinTxt"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner3"
+            app:layout_constraintTop_toBottomOf="@+id/relaSpinner2"
             app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
@@ -43,40 +88,93 @@
             android:layout_height="136dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-
-            android:src="@drawable/common_google_signin_btn_icon_dark"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/profile_pic_large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        <Spinner
-            android:id="@+id/spinner2"
+        <RelativeLayout
+            android:id="@+id/relaSpinner1"
             android:layout_width="match_parent"
-            android:layout_height="39dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_height="45dp"
             android:layout_marginEnd="30dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="18dp"
-            android:backgroundTint="#747474"
-            android:spinnerMode="dropdown"
+            android:background="@drawable/custom_spinner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ageTxt" />
+            app:layout_constraintTop_toBottomOf="@+id/ageTxt">
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="12dp"
+                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
+
+            <Spinner
+                android:id="@+id/spinner2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:spinnerMode="dropdown" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relaSpinner2"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/custom_spinner"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">
+
+            <ImageView
+                android:id="@+id/imageView65"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="12dp"
+                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="12dp" />
+
+            <Spinner
+                android:id="@+id/spinner3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:spinnerMode="dropdown"
+                android:layout_alignParentLeft="true" />
+        </RelativeLayout>
 
         <EditText
             android:id="@+id/heightTxt"
             android:layout_width="108dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="18dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
-            android:drawableRight="@drawable/arroba3"
+            android:drawableRight="@drawable/height"
             android:ems="10"
             android:gravity="right"
             android:hint="الطول"
@@ -90,33 +188,17 @@
             app:layout_constraintStart_toEndOf="@+id/ageTxt"
             app:layout_constraintTop_toBottomOf="@+id/userNameTxt" />
 
-        <Spinner
-            android:id="@+id/spinner3"
-            android:layout_width="match_parent"
-            android:layout_height="39dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginEnd="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="18dp"
-            android:backgroundTint="#747474"
-            android:spinnerMode="dropdown"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner2" />
 
         <EditText
             android:id="@+id/userNameTxt"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
-            android:drawableRight="@drawable/arroba3"
+            android:drawableRight="@drawable/user"
             android:ems="10"
             android:gravity="right"
             android:hint="الإسم"
@@ -133,14 +215,14 @@
         <EditText
             android:id="@+id/weightTxt"
             android:layout_width="108dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginTop="18dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
-            android:drawableRight="@drawable/arroba3"
+            android:drawableRight="@drawable/wieght"
             android:ems="10"
             android:gravity="right"
             android:hint="الوزن"
@@ -149,7 +231,6 @@
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/spinner2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userNameTxt"
             app:layout_constraintVertical_bias="0.0" />
@@ -157,12 +238,12 @@
         <EditText
             android:id="@+id/ageTxt"
             android:layout_width="108dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="18dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
-            android:drawableRight="@drawable/arroba3"
+            android:drawableRight="@drawable/age"
             android:ems="10"
             android:gravity="right"
             android:hint="العمر"
@@ -173,6 +254,23 @@
             android:textSize="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userNameTxt" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="24dp"
+            android:gravity="center"
+            android:text="قم بإدخال المعلومات الشخصية التالية لكي يتم وضع برنامج صحي      مخصص لك"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/actionBar" />
     </android.support.constraint.ConstraintLayout>
 
 </ScrollView>
