--- a/app/src/main/res/layout/card_sets_add.xml
+++ b/app/src/main/res/layout/card_sets_add.xml
@@ -38,7 +38,7 @@
                 android:layout_alignParentRight="true" />
 
             <EditText
-                android:id="@+id/txtIngr"
+                android:id="@+id/txtReps"
                 android:layout_width="82dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
