--- a/app/src/main/res/layout/activity_add_new_exercise.xml
+++ b/app/src/main/res/layout/activity_add_new_exercise.xml
@@ -7,10 +7,6 @@
     tools:context=".Activity.AddNewExerciseActivity"
     android:background="#ededed"
     >
-
-
-
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/actionBar"
         android:layout_width="match_parent"
@@ -19,16 +15,13 @@
         android:gravity="top"
         android:layout_alignParentTop="true"
         android:background="#002e65"
-
         android:paddingRight="0dp"
         android:layout_alignParentLeft="true">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
             >
-
             <ImageView
                 android:id="@+id/logo"
                 android:layout_width="100dp"
@@ -40,33 +33,25 @@
                 android:src="@drawable/logo_white"
                 android:layout_marginLeft="135dp"
                 android:layout_alignParentLeft="true" />
-
-
             <ImageView
                 android:id="@+id/profile"
                 android:layout_width="29dp"
                 android:layout_height="match_parent"
-
                 android:layout_alignParentStart="true"
-
-
                 android:layout_alignParentTop="true"
                 android:onClick="openDrawer"
                 android:paddingTop="2dp"
                 android:src="@drawable/menu"
                 tools:ignore="OnClick"
                 android:layout_alignParentLeft="true" />
-
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_below="@+id/actionBar"
         android:background="@color/md_white_1000"
         >
-
         <TextView
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
@@ -77,7 +62,6 @@
             android:textSize="16sp"
             android:layout_centerHorizontal="true"/>
     </RelativeLayout>
-
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="170dp"
@@ -86,16 +70,14 @@
         android:layout_marginTop="113dp"
         android:layout_marginLeft="55dp"
         android:layout_marginRight="55dp">
-
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imageViewNewEx"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/header" />
     </android.support.v7.widget.CardView>
-
     <EditText
-        android:id="@+id/txtName"
+        android:id="@+id/txtExName"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_centerInParent="true"
@@ -110,8 +92,7 @@
         android:id="@+id/view5"
         android:layout_width="match_parent"
         android:layout_height="3dp"
-
-        android:layout_below="@+id/txtName"
+        android:layout_below="@+id/txtExName"
         android:background="@color/scifitBlue"
         android:text="نسيت كلمة المرور؟"
         android:textColor="@color/scifitBlue"
@@ -120,11 +101,9 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtName" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/txtExName" />
     <Spinner
-        android:id="@+id/spinnerMuscle"
+        android:id="@+id/spinnerMu"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
@@ -136,7 +115,7 @@
         android:id="@+id/view6"
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:layout_alignBottom="@+id/spinnerMuscle"
+        android:layout_alignBottom="@+id/spinnerMu"
         android:layout_centerHorizontal="true"
         android:background="@color/scifitBlue"
         android:text="نسيت كلمة المرور؟"
@@ -144,13 +123,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerMuscle"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerMu"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         />
-
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/saveNewExBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -161,6 +139,4 @@
         android:textColor="@color/md_white_1000"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"/>
-
-
 </RelativeLayout>
