--- a/app/src/main/res/layout/fragment_add_workout2user.xml
+++ b/app/src/main/res/layout/fragment_add_workout2user.xml
@@ -17,14 +17,18 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/relativeLayout3"
             android:layout_width="match_parent"
-            android:layout_height="535dp"
+            android:layout_height="663dp"
             android:background="@color/grey">
 
             <RelativeLayout
                 android:id="@+id/relative"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/md_white_1000">
+                android:layout_marginBottom="13dp"
+                android:background="@color/md_white_1000"
+                app:layout_constraintBottom_toTopOf="@+id/spinnerUser"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/textView18"
@@ -37,7 +41,7 @@
             </RelativeLayout>
 
             <Spinner
-                android:id="@+id/spinner5"
+                android:id="@+id/spinnerExerciseName"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
@@ -48,10 +52,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner6" />
+                app:layout_constraintTop_toBottomOf="@+id/spinnertargetedMu" />
 
             <Spinner
-                android:id="@+id/spinner6"
+                android:id="@+id/spinnertargetedMu"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
@@ -61,10 +65,10 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner8" />
+                app:layout_constraintTop_toBottomOf="@+id/spinnerExerciseNo" />
 
             <Spinner
-                android:id="@+id/spinner8"
+                android:id="@+id/spinnerExerciseNo"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
@@ -74,10 +78,10 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner10" />
+                app:layout_constraintTop_toBottomOf="@+id/spinnerDay" />
 
             <Spinner
-                android:id="@+id/spinner10"
+                android:id="@+id/spinnerDay"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
@@ -87,15 +91,17 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner7" />
+                app:layout_constraintTop_toBottomOf="@+id/spinnerUser" />
 
             <Spinner
-                android:id="@+id/spinner7"
+                android:id="@+id/spinnerUser"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
+                android:layout_marginBottom="576dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="13dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/relative" />
@@ -108,31 +114,33 @@
                 android:layout_marginLeft="55dp"
                 android:layout_marginRight="55dp"
                 android:layout_marginStart="55dp"
-                android:layout_marginTop="23dp"
+                android:layout_marginTop="60dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner5">
+                app:layout_constraintTop_toBottomOf="@+id/spinnerExerciseName">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/imageViewEx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/welcome_screen" />
             </android.support.v7.widget.CardView>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textViewExName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="129dp"
                 android:layout_marginLeft="129dp"
                 android:layout_marginRight="129dp"
                 android:layout_marginStart="129dp"
+                android:layout_marginTop="24dp"
                 android:fontFamily="@font/cairo_semibold"
                 android:text="Exercise Name Here"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
@@ -144,12 +152,13 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginStart="25dp"
-                android:layout_marginTop="1dp"
+                android:layout_marginTop="64dp"
                 android:background="@color/scifitBlue"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
 
-                app:layout_constraintTop_toBottomOf="@+id/textView2">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewExName">
 
                 <TextView
                     android:id="@+id/txtSetsShow"
@@ -181,6 +190,8 @@
             android:id="@+id/recyclerSetsAdmin"
             android:layout_width="match_parent"
             android:layout_height="201dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:background="@color/grey" />
 
         <android.support.constraint.ConstraintLayout
