--- a/app/src/main/res/layout/activity_meal_ingr.xml
+++ b/app/src/main/res/layout/activity_meal_ingr.xml
@@ -8,19 +8,6 @@
 
     // هذي اللي تسوي البار اللي فوق
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bNavigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:background="#333333"
-        android:scrollbars="horizontal"
-        app:menu="@menu/menu_nav"
-        android:layout_alignParentLeft="true">
-
-    </android.support.design.widget.BottomNavigationView>
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/actionBar"
         android:layout_width="match_parent"
@@ -47,60 +34,59 @@
                 android:src="@drawable/logo_white" />
 
 
-            <ImageView
-                android:id="@+id/profile"
-                android:layout_width="39dp"
-                android:layout_height="match_parent"
-
-                android:layout_alignParentStart="true"
-
-
-                android:layout_alignParentTop="true"
-                android:onClick="openDrawer"
-                android:paddingTop="2dp"
-                android:src="@drawable/profile_on_top"
-                tools:ignore="OnClick"
-                android:layout_alignParentLeft="true" />
-
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/appbarid"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="218dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/actionBar"
         android:background="@color/grey"
         android:elevation="0dp"
-        android:gravity="center"
-        android:layout_alignParentLeft="true">
+        android:gravity="center">
+
 
         <TextView
             android:id="@+id/mealNo"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
             android:background="#ffff"
-            android:layout_gravity="center"
-            android:text="fkjdhfidfdfij"/>
-
+            android:gravity="center"
+            android:text="إسم الوجبة"
+            app:layout_constraintBottom_toTopOf="@+id/mealimg"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/mealimg"
-            android:layout_marginTop="25dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/header" />
+            android:layout_width="384dp"
+            android:layout_height="171dp"
+            android:layout_marginEnd="14dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="12dp"
+            android:src="@drawable/header"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mealNo" />
 
 
-    </android.support.design.widget.AppBarLayout>
+    </android.support.constraint.ConstraintLayout>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/viewpager_id"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/appbarid"
         android:background="#333333"
         app:tabGravity="fill"
         app:tabIndicatorColor="#1d1d1d"
@@ -120,14 +106,12 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_id"
         android:layout_width="match_parent"
-        android:layout_height="277dp"
+        android:layout_height="334dp"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="56dp"
-        android:background="@color/grey"
-        android:layout_alignParentLeft="true" />
-
-
+        android:layout_marginBottom="0dp"
+        android:background="@color/grey" />
 
 
 </RelativeLayout>
