--- a/app/src/main/res/layout/activity_workout_user.xml
+++ b/app/src/main/res/layout/activity_workout_user.xml
@@ -8,15 +8,28 @@
     android:background="@color/grey">
 
 
-    <TextView
-        android:id="@+id/daytv2"
+    <RelativeLayout
+        android:id="@+id/relativeLayout6"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_alignParentStart="true"
+        android:layout_height="35dp"
         android:layout_below="@+id/actionBar"
-        android:gravity="center"
-        android:text="kljflkgfjgf"
-        android:layout_alignParentLeft="true" />
+        android:background="@color/md_white_1000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/actionBar">
+
+        <TextView
+            android:id="@+id/daytv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:fontFamily="@font/cairo_semibold"
+            android:gravity="center"
+            android:text="يوم 1"
+            android:textSize="16sp" />
+    </RelativeLayout>
+
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/actionBar"
@@ -46,45 +59,16 @@
                 android:src="@drawable/logo_white" />
 
 
-            <ImageView
-                android:id="@+id/profile"
-                android:layout_width="29dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:onClick="openDrawer"
-                android:paddingTop="2dp"
-                android:src="@drawable/menu"
-                tools:ignore="OnClick"
-                android:layout_alignParentLeft="true" />
-
-
-
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/exRecycler"
         android:layout_width="match_parent"
-        android:layout_height="456dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:background="@color/grey" />
-
-
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bNavigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="558dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="#333333"
-        android:scrollbars="horizontal"
-        app:menu="@menu/menu_nav"
-        android:layout_alignParentLeft="true"></android.support.design.widget.BottomNavigationView>
-
+        android:background="@color/grey" />
 
 
 </RelativeLayout>
