--- a/app/src/main/res/layout/card_sets_add.xml
+++ b/app/src/main/res/layout/card_sets_add.xml
@@ -10,8 +10,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
+
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp" >
@@ -24,18 +23,17 @@
                 android:id="@+id/txtSet"
                 android:layout_width="74dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="56dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="71dp"
                 android:ems="10"
-                android:text="1"
-                android:gravity="center"
-                android:textSize="18dp"
                 android:fontFamily="@font/cairo_semibold"
+                android:gravity="center"
                 android:inputType="number"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="56dp"
-                android:layout_alignParentRight="true" />
+                android:text="1"
+                android:textSize="18dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="71dp" />
 
             <EditText
                 android:id="@+id/txtReps"
@@ -47,7 +45,7 @@
                 android:ems="10"
                 android:inputType="number"
                 android:layout_marginLeft="56dp"
-                android:background="@drawable/custom_edit_text"
+                android:background="@drawable/custom_table_text"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"/>
         </RelativeLayout>
