--- a/app/src/main/res/layout/card_sets_show.xml
+++ b/app/src/main/res/layout/card_sets_show.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ededed">
+    android:background="@color/grey">
 
 
 
@@ -12,92 +12,119 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
+
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp" >
 
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:id="@+id/relativeLayout10">
 
             <TextView
                 android:id="@+id/txtReps"
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="77dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="4dp"
                 android:ems="10"
                 android:fontFamily="@font/cairo_semibold"
                 android:gravity="center"
                 android:inputType="number"
                 android:text="12"
                 android:textSize="18dp"
-                android:layout_marginRight="77dp"
-                android:layout_alignParentRight="true" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/txtSet"
+                app:layout_constraintStart_toEndOf="@+id/txtWeight"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.428" />
 
             <TextView
                 android:id="@+id/txtSet"
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
+                android:layout_marginBottom="4dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="4dp"
                 android:ems="10"
                 android:fontFamily="@font/cairo_semibold"
                 android:gravity="center"
                 android:inputType="number"
                 android:text="1"
                 android:textSize="18dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="16dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textViewVolume"
                 android:layout_width="69dp"
+                android:gravity="center"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="11dp"
-                android:background="@drawable/custom_edit_text"
+                android:layout_marginBottom="4dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginVertical="4dp"
+                android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:inputType="number"
-                android:layout_marginLeft="11dp"
                 android:textSize="18dp"
-                android:layout_alignParentLeft="true"
-                android:layout_marginVertical="4dp"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/txtRM1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.428" />
 
             <TextView
                 android:id="@+id/txtRM1"
-                android:layout_width="40dp"
+                android:layout_width="62dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="97dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginEnd="17dp"
+                android:layout_marginRight="17dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginVertical="4dp"
-                android:background="@drawable/custom_edit_text"
+                android:background="@drawable/custom_table_text"
                 android:ems="10"
+                android:gravity="center"
+
                 android:inputType="number"
                 android:textSize="18dp"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="97dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/txtWeight"
+                app:layout_constraintStart_toEndOf="@+id/textViewVolume"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.428" />
 
             <EditText
                 android:id="@+id/txtWeight"
                 android:layout_width="51dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="134dp"
-                android:background="@drawable/custom_edit_text"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginVertical="4dp"
+                android:background="@drawable/custom_table_text"
                 android:ems="10"
                 android:inputType="number"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="134dp"
-                android:layout_marginVertical="4dp"/>
-        </RelativeLayout>
+                android:gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/txtRM1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.428" />
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
 
