--- a/app/src/main/res/layout/days_adapter_exercise.xml
+++ b/app/src/main/res/layout/days_adapter_exercise.xml
@@ -24,10 +24,8 @@
                 android:layout_height="32dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="93dp"
-                app:srcCompat="@drawable/workoutcount"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="93dp" />
+                android:layout_marginStart="120dp"
+                app:srcCompat="@drawable/workoutcount" />
 
             <ImageView
                 android:id="@+id/calsIcon"
@@ -35,10 +33,8 @@
                 android:layout_height="21dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="140dp"
-                app:srcCompat="@drawable/mouscle"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="140dp" />
+                android:layout_marginEnd="153dp"
+                app:srcCompat="@drawable/mouscle" />
 
             <TextView
                 android:id="@+id/txtCount"
@@ -46,9 +42,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="35dp"
                 android:text="عدد التمارين"
-                android:textColor="@android:color/black"
-                android:layout_alignParentLeft="true" />
+                android:textColor="@android:color/black" />
 
             <TextView
                 android:id="@+id/txtCals"
@@ -60,14 +56,12 @@
 
             <ImageView
                 android:id="@+id/dayIcon"
-                android:layout_width="wrap_content"
+                android:layout_width="20dp"
                 android:layout_height="23dp"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="-68dp"
-                android:layout_toEndOf="@+id/txtDay"
-                app:srcCompat="@drawable/icons_calendar_px_"
-                android:layout_marginLeft="-68dp"
-                android:layout_toRightOf="@+id/txtDay" />
+                android:layout_marginEnd="31dp"
+                app:srcCompat="@drawable/icons_calendar_px_" />
 
             <TextView
                 android:id="@+id/txtDay"
@@ -75,11 +69,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="68dp"
+                android:layout_marginEnd="59dp"
                 android:text="يوم 1"
-                android:textColor="@android:color/black"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="68dp" />
+                android:textColor="@android:color/black" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
