--- a/app/src/main/res/layout/fragment_add_meal_ing.xml
+++ b/app/src/main/res/layout/fragment_add_meal_ing.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -13,110 +13,115 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="#ededed"
+        android:background="@color/grey"
         android:orientation="vertical"
         android:layout_alignParentLeft="true">
 
-        <android.support.v7.widget.CardView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="38dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="15dp">
+            android:layout_height="45dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/table_diet">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#cf0545">
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
 
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:paddingTop="10dp"
-                    android:text="القيم الغذائية"
-                    android:textColor="#ffffff" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="5dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#cf0545">
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginEnd="42dp"
-                    android:layout_marginRight="42dp"
-                    android:paddingTop="5dp"
-                    android:text="نوع السعرات "
-                    android:textColor="#ffffff" />
-
-                <TextView
-                    android:id="@+id/totalcals"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="54dp"
-                    android:layout_marginStart="54dp"
-                    android:paddingTop="5dp"
-                    android:text="مجموع السعرات"
-                    android:textColor="#ffffff" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+                android:fontFamily="@font/cairo_semibold"
+                android:textSize="18sp"
+                android:text="القيم الغذائية"
+                android:textColor="#ffffff" />
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="35dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
 
+            android:background="@drawable/table_diet_under">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="213dp"
-                android:layout_marginBottom="45dp">
-
-            </android.support.v7.widget.RecyclerView>
-
-            <Button
-                android:id="@+id/addNewIngBtn"
-                android:layout_width="116dp"
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginBottom="34dp"
-                android:text="اضف صنف"
-                android:layout_alignParentRight="true" />
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="42dp"
+                android:layout_marginRight="42dp"
+                android:text="مجموع السعرات"
+                android:textColor="#ffffff" />
+
+            <TextView
+                android:id="@+id/totalcals"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="54dp"
+                android:layout_marginStart="54dp"
+                android:text="مجموع السعرات"
+                android:textColor="#ffffff" />
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="177dp"
+            android:background="@color/grey">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:background="@color/grey"
+            android:weightSum="2">
 
             <Button
                 android:id="@+id/updateCalsBtn"
-                android:layout_width="116dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="25dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/scifitRed"
+                android:textColor="@color/md_white_1000"
                 android:text="تحديث السعرات" />
 
-        </RelativeLayout>
+            <Button
+                android:id="@+id/addNewIngBtn"
+                android:layout_width="wrap_content"
+                android:backgroundTint="@color/scifitRed"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="25dp"
+                android:textColor="@color/md_white_1000"
+                android:layout_weight="1"
+                android:text="اضف صنف" />
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
