--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -8,10 +8,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Activity.BottomNav"
+    android:background="@color/grey"
     >
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recyclerViewEx"></android.support.v7.widget.RecyclerView>
+        android:id="@+id/recyclerViewEx"
+        android:background="@color/grey"></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
