--- a/app/src/main/res/layout/fragment_meals_details.xml
+++ b/app/src/main/res/layout/fragment_meals_details.xml
@@ -17,85 +17,67 @@
         android:orientation="vertical"
         android:layout_alignParentLeft="true">
 
-        <android.support.v7.widget.CardView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="38dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="15dp">
+            android:layout_height="45dp"
+            android:background="@drawable/table_diet"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="12dp">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#cf0545">
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:paddingTop="10dp"
-                    android:text="القيم الغذائية"
-                    android:textColor="#ffffff" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="5dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#cf0545">
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginEnd="42dp"
-                    android:layout_marginRight="42dp"
-                    android:paddingTop="5dp"
-                    android:text="نوع السعرات "
-                    android:textColor="#ffffff" />
-
-                <TextView
-                    android:id="@+id/totalcals"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="54dp"
-                    android:layout_marginStart="54dp"
-                    android:paddingTop="5dp"
-                    android:text="مجموع السعرات"
-                    android:textColor="#ffffff" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="القيم الغذائية"
+                android:fontFamily="@font/cairo_semibold"
+                android:textSize="18sp"
+                android:textColor="#ffffff" />
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="25dp"
+            android:background="@drawable/table_diet_under">
 
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="42dp"
+                android:layout_marginRight="42dp"
+                android:layout_centerVertical="true"
+                android:text="نوع السعرات "
+                android:textColor="#ffffff" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerMealDetailesElements"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="45dp">
-
-            </android.support.v7.widget.RecyclerView>
-
+            <TextView
+                android:id="@+id/totalcals"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="54dp"
+                android:layout_marginStart="54dp"
+                android:layout_centerVertical="true"
+                android:text="مجموع السعرات"
+                android:textColor="#ffffff" />
         </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerMealDetailesElements"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="7dp">
+
+        </android.support.v7.widget.RecyclerView>
 
 
     </LinearLayout>
