--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="scifitBlue">#002e65</color>
     <color name="scifitRed">#cf0545</color>
     <color name="grey">#ededed</color>
+    <color name="blackGrey">#3f3e3e</color>
 
 
     <color name="tabtextcolor">#fff</color>
